<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatsUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Text Box Placeholders -->
    <string name="placeholder_email_address">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_address">Address</string>
    <string name="placeholder_website">Website</string>
    <string name="placeholder_starttime">Start</string>
    <string name="placeholder_endtime">End</string>
    <string name="placeholder_eventtitle">Title</string>
    <string name="placeholder_street1">Street Address</string>
    <string name="placeholder_street2">Apartment, Suite, etc</string>
    <string name="placeholder_city">City</string>
    <string name="placeholder_state">State</string>
    <string name="placeholder_postalcode">Zip</string>
    <string name="placeholder_description">A short description of what\'s up</string>
    <string name="placeholder_phone">Phone Number</string>
    <string name="placeholder_firstName">First Name</string>
    <string name="placeholder_lastName">Last Name</string>
    <string name="placeholder_details_category">Filed Under</string>
    <string name="placeholder_details_description">Event Description</string>
    <string name="placeholder_details_starttime">Starts At</string>
    <string name="placeholder_details_visitwebsite">Visit Website</string>

    <!-- Labels -->
    <string name="label_starttime">Starts At:</string>

    <!-- Activity Titles -->
    <string name="title_activity_login_screen">What\'s Up</string>
    <string name="title_activity_map_screen">Map</string>
    <string name="title_activity_event_details">Details</string>
    <string name="title_activity_event_list">All Events</string>

    <!-- Button Labels -->
    <string name="label_log_in">Log In</string>
    <string name="List">List</string>
    <string name="Map">Map</string>
    <string name="Event">Event</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_event_add_edit">Event Add/Edit</string>
    <string name="label_change_date">Change Date</string>
    <string name="label_change_time">Change Time</string>
    <string name="label_delete">Delete</string>

    <!-- Other Labels -->
    <string name="eventaddedit_checkbox_location_current">Use Current Location</string>
    <string name="eventaddedit_checkbox_location_selected">Use Selected Location</string>
    <string name="address_city_state_separator">,</string>

    <!-- Menu Stuff -->
    <string name="menu_add_event">ADD EVENT</string>
    <string name="menu_refresh_list">REFRESH</string>
    <string name="navigate_button">Navigate</string>

</resources>
