<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.fau.whatsup.Signup"
    android:id="@+id/signup_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_container"
        android:padding="@dimen/activity_vertical_margin"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/map"
            android:layout_margin="@dimen/login_widget_margin" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signup_email"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/placeholder_email_address" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signup_password"
            android:layout_below="@+id/signup_email"
            android:layout_alignParentStart="true"
            android:hint="@string/placeholder_password" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_firstName"
                android:layout_weight="0.5"
                android:hint="@string/placeholder_firstName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_lastName"
                android:layout_weight="0.5"
                android:hint="@string/placeholder_lastName" />
        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/signup_age"
            android:layout_alignParentStart="true"
            android:hint="Age"
            android:layout_below="@+id/signup_password" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:id="@+id/signup_btnSignUp"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/signup_password"
            android:layout_marginTop="@dimen/login_widget_margin" />
    </LinearLayout>

</RelativeLayout>
